[gd_scene load_steps=8 format=3 uid="uid://bnovo4dummyvg"]

[ext_resource type="Script" path="res://scenes/enemies/baby_slime.gd" id="1_tjnqk"]
[ext_resource type="Texture2D" uid="uid://bfknxrala6hoc" path="res://assets/characters/baby_slime.png" id="2_fwte5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5aqc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bb4wn"]
radius = 132.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7c76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3rvv"]
bg_color = Color(0.910222, 0.038437, 0.175216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4eamb"]
bg_color = Color(1, 0.850934, 0.83593, 1)

[node name="BabySlime" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -9)
motion_mode = 1
platform_floor_layers = 4294967280
script = ExtResource("1_tjnqk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fwte5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Monster"]]
z_index = 1
y_sort_enabled = true
shape = SubResource("CircleShape2D_g5aqc")

[node name="StateTimer" type="Timer" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector" groups=["Monster"]]
shape = SubResource("CircleShape2D_bb4wn")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -16.0
offset_right = 10.0
offset_bottom = -12.0
theme_override_styles/background = SubResource("StyleBoxEmpty_t7c76")
theme_override_styles/fill = SubResource("StyleBoxFlat_o3rvv")
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
show_behind_parent = true
layout_mode = 0
offset_right = 20.0
offset_bottom = 4.0
theme_override_styles/fill = SubResource("StyleBoxFlat_4eamb")
show_percentage = false

[node name="DamageBarTimer" type="Timer" parent="HealthBar/DamageBar"]

[connection signal="timeout" from="StateTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="HealthBar/DamageBar/DamageBarTimer" to="." method="_on_damage_bar_timer_timeout"]
